# sqlsonnet

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile.toml  README.md  about.hbs  about.toml  checkalot.yaml  docker-compose.yaml  nfpm.yaml  sql.pest  utils.libsonnet
bindings/wasm/: Cargo.toml
bindings/wasm/sqlsonnet-playground/: index.html  package.json  vite.config.ts
bindings/wasm/sqlsonnet-playground/src/: App.tsx  initial.jsonnet  jsonnet.js
bindings/wasm/src/: lib.rs
clickhouse-client/: Cargo.toml
clickhouse-client/src/: lib.rs
clickhouse-proxy/: Cargo.toml
clickhouse-proxy/src/: cache.rs  clickhouse_proxy.rs  error.rs  initial.jsonnet  jsonnet.js  lib.rs  playground.html  playground.rs  tracing_layer.rs
clickhouse-proxy/tests/: main.rs
docs/: index.html
docs/assets/: index-BTXR73cn.js  index-BnTzUnTT.js  index-DzMwWRW0.css  sqlsonnet_wasm_bg-BpJwEOnv.wasm  sqlsonnet_wasm_bg-DoFiXnJL.wasm
macros/: Cargo.toml
macros/src/: lib.rs
playground/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
playground/src/: App.css  App.tsx  main.tsx
sqlsonnet/: Cargo.toml  README.md  sql.pest  sqlsonnet.libsonnet  utils.libsonnet
sqlsonnet-cli/: Cargo.toml
sqlsonnet-cli/src/: sqlsonnet.rs
sqlsonnet-playground/: index.html  vite.config.ts
sqlsonnet-playground/src/: App.css  App.tsx  initial.jsonnet
sqlsonnet/src/: error.rs  from_sql.rs  jrsonnet.rs  jsonnet.rs  lib.rs  queries.rs  sql_parse.rs  sqlsonnet.rs  to_sql.rs
sqlsonnet/src/jsonnet/: formatter.rs  mod.rs  resolver.rs
sqlsonnet/tests/: example.jsonnet  main.rs  test.sql
sqlsonnet/tests/data/: as_override.jsonnet  empty_fields.jsonnet  example.jsonnet  example.sql  function_call.jsonnet  parenthesization.jsonnet  test.sql
src/: clickhouse_proxy.rs  error.rs  jsonnet.rs  lib.rs  queries.rs  sql_parse.rs  sqlsonnet.rs  to_sql.rs
tests/: main.rs  test.sql
