[package]
name = "sqlsonnet-clickhouse-client"
version.workspace = true
repository.workspace = true
license.workspace = true
description = "Simple Clickhouse HTTP client"
edition = "2021"


[dependencies]
bytes = "1.6.1"
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
zstd = "0.13.2"
tracing.workspace = true
itertools.workspace = true
