[package]
name = "clickhouse-proxy"
version.workspace = true
edition = "2021"

[[bin]]
name = "sqlsonnet_clickhouse_proxy"
path = "src/clickhouse_proxy.rs"

[dependencies]
clickhouse-client = { path = "../clickhouse-client" }

anyhow.workspace = true
axum = { version = "0.7.5", features = ["ws"] }
bincode = "1.3.3"
bytes = { version = "1.6.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap.workspace = true
futures = "0.3.30"
itertools.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlsonnet = { path = "../sqlsonnet" }
thiserror.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.11", features = ["io", "io-util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing.workspace = true
glob.workspace = true
uuid = { version = "1.9.1", features = ["v4"] }
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.1"
tempfile = "3.10.1"
serde_json.workspace = true
include_dir = "0.7.4"
mime_guess = "2.0.5"
lazy_static.workspace = true
regex = "1.10.5"
