[package]
name = "sqlsonnet-cli"
version.workspace = true
edition = "2021"
publish = false

[[bin]]
name = "sqlsonnet"
path = "src/sqlsonnet.rs"
doc = false

[dependencies]
sqlsonnet = { workspace = true, features = ["fancy", "from-sql"] }
clickhouse-client.workspace = true

bat = { version = "0.24.0", default-features = false }
clap-stdin = "0.5.1"
clap.workspace = true
miette = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
lazy_static.workspace = true
pretty_assertions = "1.4.0"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
notify-debouncer-mini = "0.4.1"

[dev-dependencies]
anyhow.workspace = true
