[package]
name = "sqlsonnet-wasm"
version.workspace = true
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlsonnet = { path = "../../sqlsonnet" }
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7" }
getrandom = { version = "0.2", features = ["js"] }
wee_alloc = "0.4.5"
serde-wasm-bindgen = "0.6.5"
serde = { workspace = true, features = ["derive"] }
miette = { version = "7.2.0" }
itertools.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.cargo-machete]
ignored = ["getrandom"]
